--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
       <div class="header__search">
         <form action="#">
-          <input type="text" placeholder="Поиск" />
+          <input type="text" placeholder="Search" />
         </form>
       </div>
       <div class="header__logo">
@@ -27,73 +27,73 @@
           <ul>
             <li>
               <a class="promo__menu-item promo__menu-item_active" href="#"
-                >Фильмы</a
+                >Movies</a
               >
             </li>
-            <li><a class="promo__menu-item" href="#">Сериалы</a></li>
-            <li><a class="promo__menu-item" href="#">Мультфильмы</a></li>
-            <li><a class="promo__menu-item" href="#">Клипы</a></li>
-            <li><a class="promo__menu-item" href="#">Трейлеры</a></li>
+            <li><a class="promo__menu-item" href="#">TV Shows</a></li>
+            <li><a class="promo__menu-item" href="#">Cartoons</a></li>
+            <li><a class="promo__menu-item" href="#">Music Videos</a></li>
+            <li><a class="promo__menu-item" href="#">Trailers</a></li>
           </ul>
         </nav>
       </div>
       <div class="promo__content">
         <div class="promo__bg">
-          <div class="promo__genre">КОМЕДИЯ</div>
-          <div class="promo__title">МАРСИАНИН</div>
+          <div class="promo__genre">COMEDY</div>
+          <div class="promo__title">THE MARTIAN</div>
           <div class="promo__descr">
-            ИСТОРИЯ ЧЕЛОВЕКА, ВЫЖИВШЕГО НА ЧУЖОЙ ПЛАНЕТЕ В ОДИНОЧКУ
+            THE STORY OF A MAN WHO SURVIVED ALONE ON AN ALIEN PLANET
           </div>
           <div class="promo__ratings">
             <span>IMDb: 8.0</span>
-            <span>Кинопоиск: 7.7</span>
+            <span>Kinopoisk: 7.7</span>
           </div>
         </div>
         <div class="promo__interactive">
           <div>
-            <div class="promo__interactive-title">ПРОСМОТРЕННЫЕ ФИЛЬМЫ</div>
+            <div class="promo__interactive-title">WATCHED MOVIES</div>
             <ul class="promo__interactive-list">
               <li class="promo__interactive-item">
-                ЛОГАН
+                LOGAN
                 <div class="delete"></div>
               </li>
               <li class="promo__interactive-item">
-                ЛИГА СПРАВЕДЛИВОСТИ
+                JUSTICE LEAGUE
                 <div class="delete"></div>
               </li>
               <li class="promo__interactive-item">
-                ЛА-ЛА ЛЭНД
+                LA LA LAND
                 <div class="delete"></div>
               </li>
               <li class="promo__interactive-item">
-                ОДЕРЖИМОСТЬ
+                WHIPLASH
                 <div class="delete"></div>
               </li>
               <li class="promo__interactive-item">
-                СКОТТ ПИЛИГРИМ ПРОТИВ...
+                SCOTT PILGRIM VS...
                 <div class="delete"></div>
               </li>
             </ul>
           </div>
           <div>
             <form class="add">
-              <div class="promo__interactive-title">ДОБАВИТЬ НОВЫЙ ФИЛЬМ</div>
-              <span>Введите название фильма</span>
+              <div class="promo__interactive-title">ADD A NEW MOVIE</div>
+              <span>Enter the movie title</span>
               <input
                 class="adding__input"
                 type="text"
-                placeholder="Что уже посмотрено...?"
+                placeholder="What have you watched...?"
               />
-              <span>Сделать его любимым?</span>
+              <span>Make it a favorite?</span>
               <input type="checkbox" />
-              <span class="yes">Да!</span>
-              <button>Подтвердить</button>
+              <span class="yes">Yes!</span>
+              <button>Confirm</button>
             </form>
           </div>
         </div>
       </div>
       <div class="promo__adv">
-        <div class="promo__adv-title">Реклама от спонсоров</div>
+        <div class="promo__adv-title">Sponsored Ads</div>
         <img src="img/content_1.jpg" alt="some picture" />
         <img src="img/content_2.jpg" alt="some picture" />
         <img src="img/content_3.png" alt="some picture" />
